style.css
/* ... */
.nav-card-img section svg {
	border-radius: 3px;
	background: #e5e5e5;
	position: absolute;
	right: 1px;
	top: 5px;
	transition: right 0.2s;
}
.nav-card-img section svg:hover {
	background: #67c1f5;
	fill: #fff;
}

.svg-content .svg-section {
	width: fit-content;
	height: 0;
	overflow: hidden;
	position: absolute;
	top: 5px;
	right: 15px;
	background: transparent;
	display: flex;
	flex-direction: column;
	gap: 0;
	align-items: start;
	border-radius: 0;
}
.svg-content .svg-section span {
	background: #3d4450;
	width: 100%;
	padding: 10px 15px;
}
.svg-content .svg-section span:hover {
	color: #555;
	background: #dcdedf;
}
.svg-icon + .svg-section:hover,
.svg-icon:hover + .svg-section {
	height: fit-content;
	background: transparent;
	align-items: start;
}
.svg-content:hover .svg-icon{
	background: #67c1f5;
	fill: #fff;
}
.nav-card-img section .full-span {
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
	background: #022241bb;
	display: flex;
	flex-direction: column;
	gap: 5px;
	padding: 20px;
}
.nav-card-img section .full-span span:first-child {
	color: #248ee8;
	font-size: 17px;
}
.nav-card-img section .full-span span:last-child {
	font-size: 15px;
	font-weight: normal;
	line-height: 20px;
	overflow: hidden;
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 4; /* Número de linhas desejadas */
	text-overflow: ellipsis;
	white-space: normal;
}
.nav-card-img:hover section {
	opacity: 1;
}
.nav-card-img:hover img {
	filter: blur(5px);
	transform: scale(0.98);
}
.nav-card-img:hover section svg {
	right: 5px;
}
.nav-card section {
	background: #282e35;
	height: 22px;
	width: fit-content;
	padding-right: 10px;
	display: flex;
	align-items: center;
	gap: 5px;
	border-radius: 3px;
	cursor: pointer;
}
.nav-card section img {
	height: 24px;
	width: 24px;
	border-radius: 2px;
}
.nav-card section:hover {
	background: #5f656b;
}
.nav-card section:hover span {
	color: #eee;
}

.container {
	display: flex;
	padding-top: 80px;
	height: 100vh;
}
.mincontainer {
	width: 100vw;
	overflow-y: auto;
	background-color: #2c323b;
	margin-bottom: 49px;
}
main {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 20px;
	padding: 20px;
	padding-top: 10px;
}
.add {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	text-wrap: nowrap;
}
.add .add-bar {
	width: 100%;
	height: 0px;
	background: linear-gradient(to left, #373c45, #373c4500);
	transition: height 0.2s;
}
.add .add-bar:first-child {
	order: 1;
}
.add .add-bar:last-child {
	order: 3;
	background: linear-gradient(to right, #373c45, #373c4500);
}
.add span {
	font-size: 16px;
	font-weight: normal;
	margin-right: 20px;
	transition: color 0.2s;
}
.add svg {
	flex-shrink: 0;
	margin-left: 18px;
	transition: fill 0.2s;
}
.add .add-content {
	order: 2;
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 5px;
	transition: color 0.2s, fill 0.2s;
}
.add .add-content:hover span,
.add .add-content:hover svg {
	color: #eee;
	fill: #eee;
}
.add .add-content:hover ~ .add-bar {
	height: 15px;
}
.favorite-bar {
	display: flex;
	flex-direction: column;
	position: relative;
}
.favorite-container-first {
	display: flex;
	justify-self: center;
	align-items: center;
	width: fit-content;
	cursor: pointer;
}
.favorite-container-first span {
	font-size: 15px;
	padding: 5px 3px;
}
.favorite-container-first span:first-child {
	color: #dcdedf;
	padding-left: 10px;
}
.favorite-container-first:hover span:first-child {
	color: #fff;
}
.favorite-container-last {
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 100%;
	z-index: 20;
	height: 0px;
	overflow: hidden;
	background: #3d4450;
	cursor: pointer;
}
.favorite-container-last span {
	padding: 10px 15px;
	padding-right: 50px;
	color: #ddd;
}
.favorite-container-last span:hover {
	color: #555;
	background: #dcdedf;
}
.favorite-container-last span:first-child {
	margin-top: 7px;
	margin-bottom: 4px;
}
.favorite-container-last span:nth-child(2) {
	border-top: 1px solid #dddddd55;
}
.favorite-container-last span:last-child {
	border-top: 1px solid #dddddd55;
	margin-bottom: 7px;
}
.favorite-container-first:hover ~ .favorite-container-last,
.favorite-container-first ~ .favorite-container-last:hover {
	height: auto;
}
#container-library {
	display: flex;
	flex-direction: column;
	gap: 20px;
}
#cards {
	width: 100%;
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	gap: 25px;
	width: 100%;
}
.container-card {
	position: relative;
	display: flex;
	justify-content: center;
	min-width: 200px;
	min-height: 300px;
	max-width: 200px;
	max-height: 300px;
}
.card {
	margin: 0 10px;
	position: relative;
	display: flex;
	justify-content: center;
	transition: transform 0.3s;
	overflow: hidden;
	box-shadow: 0 0 15px #333333;
	cursor: pointer;
}
.card::before {
	content: "";
	background-color: #ffffff22;
	box-shadow: 0px 0px 30px #ffffff44;
	width: 300px;
	height: 200px;
	position: absolute;
	top: -140px;
	right: -120px;
	transition: right 0.3s, top 0.3s, background-color 0.3s, box-shadow 0.3s;
	transform: rotate(30deg);
	z-index: 10;
}
.card:hover {
	transform: perspective(500px) rotateX(5deg) scale(1.06);
}
.card:hover::before {
	position: absolute;
	right: -90px;
	top: -60px;
	background-color: #ffffff44;
	box-shadow: 0px 0px 30px #ffffff88;
	z-index: 10;
}
.horas-game {
	position: absolute;
	padding: 3px 10px;
	border-radius: 3px;
	background-color: #3d4455;
	transform: scale(1);
	transition: transform 0.3s, bottom 0.3s;
	bottom: -5px;
	user-select: none;
	color: white;
}
.card:hover + .horas-game {
	transform: scale(1.1);
	transition: transform 0.3s, bottom 0.3s;
	bottom: -15px;
}
img {
	width: 100%;
	object-fit: cover;
}
footer {
	padding: 0 20px;
	height: 50px;
	width: 100vw;
	position: fixed;
	bottom: 0;
	background: #171d25;
	border: 1px solid #303641;
	z-index: 51;

	display: flex;
	justify-content: space-between;
	align-items: center;
}
/* ... */

